# meter-ocr-app

./: .gitignore  README.md  download_model.py  index.html  ocr_helper.py  package-lock.json  package.json  vite.config.js  项目说明.txt
.github/workflows/: build.yml
.rapidocr_onnxruntime/models/: README.md
assets/qrcode/: README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
