[package]
name = "meter-ocr-app"
version = "0.1.0"
description = "Meter OCR - Image sorting by number recognition"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
walkdir = "2"
anyhow = "1"
base64 = "0.22"
regex = "1"
rfd = "0.15"
tokio = { version = "1", features = ["time"] }
